<resources>
    <string name="app_name">MyKasirPos</string>
    <string name="tambah_barang">Tambah Barang</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="stock">Stock</string>
    <string name="Jenis">Jenis</string>
    <string name="register">Register</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="no_telp">No. Telp</string>
    <string name="alamat_toko">Alamat Toko</string>
    <string name="daftar">Daftar</string>
    <string name="team">Team</string>
    <string name="potato_inc">Potato Inc</string>
    <string name="ingat_saya">Ingat Saya</string>
    <string name="login">Login</string>
    <string name="masuk">Masuk</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="harga">Harga</string>
    <string name="total">Total</string>
    <string name="bayar">Rp. 10.000</string>
    <string name="uang">Uang Bayar</string>
    <string name="kembalian">Kembalian Rp.</string>
    <string name="pembayaran">Lakukan Pembayaran</string>
    <string name="lima_ribu">5000</string>
    <string name="sepuluh_ribu">10000</string>
    <string name="dua_puluh">20000</string>
    <string name="lima_puluh">50000</string>
    <string name="seratus_ribu">100000</string>
    <string name="total_bayar">%1$.2f</string>
    <string name="transaksi">Transaksi</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="daftar_produk">Daftar Produk</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bayar_checkout">BAYAR</string>
    <string name="contoh_barang">Contoh Barang</string>
    <string name="semua_item">Semua Item</string>
    <string name="tampilan">Tampilan</string>
    <string name="desc">Sepertinya kamu belum memasukkan barang, ayo masukkan barangmu segera!</string>
</resources>